DOCSP-999 - Fixed accordion animation jumping by removing the margin on the last element in each accordion group.

--- a/src/sass/bem-components/block.scss
+++ b/src/sass/bem-components/block.scss
@@ -26,6 +26,12 @@
   &__link {
     text-decoration: none;
     color: $green-primary;
+
+    // Remove the margin on the last accordion element, fixes animation jumping
+    &:last-child :last-child {
+      margin-bottom: 0px;
+    }
+
   }
 
   &__body {
